[project]
name = "code-security-audit-env"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for code security auditing"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core[core]>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
